--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "farmerOne",
+  "name": "farmer-one",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
@@ -24,6 +24,7 @@
     "@ionic-native/splash-screen": "5.0.0-beta.15",
     "@ionic-native/status-bar": "5.0.0-beta.15",
     "@ionic/angular": "4.0.0-beta.7",
+    "chart.js": "^2.7.2",
     "core-js": "^2.5.3",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
